--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Trees Image - Pexels: https://www.pexels.com/photo/photo-of-trees-in-forest-3801030/ */
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
 
 html {
   box-sizing: border-box;
@@ -14,7 +14,7 @@ html {
 
 body {
   margin: 0;
-  background: url('./trees.jpg');
+  background: url("./trees.jpg");
   background-size: cover;
   background-position: 50% 60%;
   background-attachment: fixed;
@@ -89,7 +89,7 @@ ul {
 /* Custom Scrollbar */
 .custom-scroll {
   overflow-y: auto;
-  max-height: 75vh;
+  max-height: 52vh;
 }
 
 .custom-scroll::-webkit-scrollbar-track {
